--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,25 +2,25 @@
 #
 # Check https://circleci.com/docs/2.0/language-python/ for more details
 #
+# circle 빌드테스트 구성해야함
 version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6.2-stretch-browsers
+      - image: circleci/python:3.7.7-stretch-browsers
         environment:
           FLASK_CONFIG: testing
-          TEST_DATABASE_URL: postgresql://circleci@localhost/test?sslmode=disable
+          TEST_DATABASE_URL: $SQLALCHEMY_DATABASE_URI
       - image: circleci/postgres:9.6.5-alpine-ram
         environment:
-          POSTGRES_USER: circleci
-          POSTGRES_DB: test
-          POSTGRES_PASSWORD: ""
+          MYSQL_USER: root
+          MYSQL_DATABASE: test-db
+
 
     working_directory: ~/repo
 
     steps:
-      - checkout
-
+      - checkout 
       # Download and cache dependencies
       - restore_cache:
           keys:
