--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,14 +11,11 @@ jobs:
         environment:
           FLASK_CONFIG: testing
           TEST_DATABASE_URL: $SQLALCHEMY_DATABASE_URI
-      - image: circleci/postgres:9.6.5-alpine-ram
+      - image: circleci/mysql:5.7
         environment:
           MYSQL_USER: root
-          MYSQL_DATABASE: test-db
-
-
-    working_directory: ~/repo
-
+          MYSQL_DATABASE: test-db 
+    working_directory: ~/repo 
     steps:
       - checkout 
       # Download and cache dependencies
@@ -43,9 +40,11 @@ jobs:
       # run tests!
       - run:
           name: run tests
-          command: |
-            . venv/bin/activate
-            python manage.py db upgrade
+          command: | 
+            python app/main.py db init
+            python app/main.py db migrate
+            python app/main.py db upgrade
+            python initdb.py
             nose2
 
       - store_artifacts:
