Docker-compose 연동, Static Folder 연동 작업중.. 근데 worker가 아직 작동하지 않음

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,9 @@ services:
     build: ./ 
     volumes:
       - ~/.aws/:/root/.aws
+    depends_on:
+      - redis
+    command:
+      bash -c "sh /start.sh &  rq worker -u redis://redis:6379"
+  redis:
+    image: "redis:alpine" 
