--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-
+app/migrations
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -80,3 +80,7 @@ Temporary Items
 .apdisk
 
 .env
+#redis rdb
+dump.rdb
+testcode.db
+test.db
