--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,6 +1,10 @@
 version: '3.1'
 services:
   web: 
+    environment:
+      - FLASK_APP=main.py
+      - FLASK_DEBUG=1
+    command: flask run --host=0.0.0.0
     env_file: ./app/.env
     ports: 
       - 8080:80  
