--- a/backend/receiver/flask.ini
+++ b/backend/receiver/flask.ini
@@ -3,5 +3,5 @@ directory=/home/ec2-user/.manager/capstone-2021-4/backend/receiver
 command=/usr/local/bin/gunicorn app:app -b 0.0.0.0:61331
 autostart=true
 autorestart=true
-#stderr_logfile=/var/log/hello_world/hello_world.err.log
-#stdout_logfile=/var/log/hello_world/hello_world.out.log
+stderr_logfile=/hello_world.err.log
+stdout_logfile=/hello_world.out.log
